--- a/example/module-loading/zmod.json5
+++ b/example/module-loading/zmod.json5
@@ -1,11 +1,8 @@
 {
-  "name": ".zmod",
+  "name": "demo1",
   "version": "1.0.0",
   "description": "",
   "main": "lib/main.zsh",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "MIT"
