--- a/src/qjs-tools/package.json
+++ b/src/qjs-tools/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec \"npm run prettier && npm run lint:fix && npm run dev:build\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prettier": "prettier --write .",
     "lint:fix": "eslint --fix '**/*.{ts,mjs,ts}'",
     "dev:build": "tsc -p tsconfig.json"
@@ -18,12 +18,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
   }
 }
