--- a/src/qjs-tools/tsconfig.json
+++ b/src/qjs-tools/tsconfig.json
@@ -14,10 +14,5 @@
     "noImplicitReturns": true // Ensure that all functions specify a return type
   },
   // the files will exclude before compile
-  "exclude": [
-    "node_modules",
-     "dist",
-      "src/lib", "tests", 
-  "jest.config.ts"
-]
+  "exclude": ["node_modules", "dist", "src/lib", "tests", "jest.config.ts"]
 }
