--- a/src/qjs-tools/package.json
+++ b/src/qjs-tools/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec \"pnpm prettier && pnpm lint:fix && pnpm dev:build && pnpm test\"",
+    "dev": "nodemon --exec \"pnpm prettier && pnpm lint:fix && pnpm dev:build\"",
     "test": "jest",
     "prettier": "prettier --write .",
     "lint:fix": "eslint --fix '**/*.{ts,mjs,ts}'",
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@types/json5": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
@@ -29,5 +30,8 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "json5": "^2.2.3"
   }
 }
