--- a/src/qjs-tools/tsconfig.json
+++ b/src/qjs-tools/tsconfig.json
@@ -1,7 +1,11 @@
 {
+  "include": [
+    "src/**/*.ts", // the files will be compiled
+    "src/types/**/*"
+  ],
   "compilerOptions": {
     "target": "ES2020", // the target js version will be compiled
-    "module": "ES2020", // the js module will be output
+    // "module": "ES2020", // the js module will be output
     "declaration": true, // ouput the declaration file
     "sourceMap": true, // ouput the source map file,
     "outDir": "dist", // output directory
@@ -11,7 +15,10 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "noImplicitAny": true, // Ensure that no expressions are implicitly 'any'
-    "noImplicitReturns": true // Ensure that all functions specify a return type
+    "noImplicitReturns": true, // Ensure that all functions specify a return type,
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "allowJs": true
   },
   // the files will exclude before compile
   "exclude": ["node_modules", "dist", "src/lib", "tests", "jest.config.ts"]
