--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,6 +48,7 @@ jobs:
         run: |
           docker exec ${CONTAINER_NAME} bash -c "
             yum install -y make zsh;
+            pwd
             export PATH=${PATH}:$(pwd)/bin;
             qjs --version
             make unit-test;
