--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,18 +48,13 @@ jobs:
         run: |
           docker exec ${CONTAINER_NAME} bash -c "
             yum install -y make zsh;
-            pwd
-            ls -ahl
-            export PATH=${PATH}:$(pwd)/bin;
+            export PATH=\${PATH}:\$(pwd)/bin;
             bin/qjs --version
             make unit-test;
           "
       - name: Integration test
         run: |
           docker exec ${CONTAINER_NAME} bash -c "
-            export PATH=${PATH}:$(pwd)/bin;
-            pwd;
-            ls -ahl
-            qjs --version
+            export PATH=\${PATH}:\$(pwd)/bin;
             make integration-test;
           "
