fix(qjs-tools): fix the issue about the args was incorrect to parse in bin/cli-option-args-parser

--- a/src/qjs-tools/tsconfig.json
+++ b/src/qjs-tools/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": [
-    "src/**/*.ts", // the files will be compiled
+    "src/**/*.ts" // the files will be compiled
   ],
   "compilerOptions": {
     "typeRoots": ["node_modules/@types", "src/types"], // the type roots
