--- a/src/qjs-tools/.vscode/settings.json
+++ b/src/qjs-tools/.vscode/settings.json
@@ -35,5 +35,7 @@
     "**/.git": true,
     "**/.idea": true,
     "**/dist": true,
-  }
+  },
+  "typescript.suggest.autoImports": true,
+  "javascript.suggest.autoImports": true
 }
