--- a/src/qjs-tools/.vscode/settings.json
+++ b/src/qjs-tools/.vscode/settings.json
@@ -34,8 +34,19 @@
     "**/node_modules": true,
     "**/.git": true,
     "**/.idea": true,
-    "**/dist": true,
+    "**/dist": true
   },
+  // config for typescript
+  "typescript.tsserver.experimental.enableProjectDiagnostics": true,
   "typescript.suggest.autoImports": true,
-  "javascript.suggest.autoImports": true
+  "javascript.suggest.autoImports": true,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/coverage": true
+  }
 }
