--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,7 @@ jobs:
           npm install -g pnpm
       - name: Install dependencies
         run: |
+          cd src/qjs-tools
           pnpm install
       - name: Run tests
         run: |
