chore: update the config for vscode

--- a/src/qjs-tools/.vscode/settings.json
+++ b/src/qjs-tools/.vscode/settings.json
@@ -47,6 +47,7 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    "**/coverage": true
+    "**/coverage": true,
+    "**/.idea": true
   }
 }
