--- a/src/qjs-tools/package.json
+++ b/src/qjs-tools/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/json5": "^2.2.0",
+    "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
