--- a/zpm.json5
+++ b/zpm.json5
@@ -1,12 +1,12 @@
 {
-  "name": ".zpm",
-  "version": "1.0.0",
-  "description": "",
-  "main": "lib/main.zsh",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT"
+    name: "github.com/wuchuheng/zpm-hello",
+    version: "1.0.0",
+    description: "A zpm package",
+    main: "src/main.zsh",
+    scripts: {
+        test: "echo \"Error: no test specified\" && exit 1"
+    },
+    keywords: [],
+    author: "",
+    license: "ISC"
 }
