--- a/zpm.json5
+++ b/zpm.json5
@@ -4,7 +4,8 @@
     description: "A zpm package",
     main: "src/main.zsh",
     scripts: {
-        test: "echo \"Error: no test specified\" && exit 1"
+        test: "echo \"Error: no test specified\" && exit 1",
+        hello: "echo \"hello world\""
     },
     keywords: [],
     author: "",
