feat(qjs-tools, zpm): Implement package installation and refactor file I/O operations
- Refactored `get-import-path-in-zsh-file.js` in `qjs-tools` to use `readFile` from a new `io` module instead of `std`.
- Removed `std.js` and introduced `io.ts` to handle file I/O operations, consolidating file existence checks and read/write functionalities.
- Implemented new `install_package` function in `zpm.zsh` for installing packages, including git repository cloning and updating `zpm-package.json5` dependencies.
- Added `edit-zpm-json5-dependencies.ts` in `qjs-tools` for editing JSON5 files, particularly for setting or deleting key-value pairs in `dependencies`.
- Updated `zpm-boot.zsh` to include the new `install` command, integrating it into the ZPM command workflow.
- Modified help documentation in various files to align with the new features and command syntax changes.
- Updated `zpm-package.json5` to demonstrate dependency management with the new `install` command.

These enhancements significantly improve the ZPM's package management capabilities and streamline file I/O operations in `qjs-tools`, enhancing overall functionality and user experience.

--- a/zpm-package.json5
+++ b/zpm-package.json5
@@ -1,13 +1,16 @@
 {
-    name: "github.com/wuchuheng/zpm-hello",
-    version: "1.0.0",
-    description: "A zpm package",
-    main: "src/main.zsh",
-    scripts: {
-        test: "echo \"Error: no test specified\" && exit 1",
-        hello: "echo \"hello world\""
-    },
-    keywords: [],
-    author: "",
-    license: "ISC"
+  name: 'github.com/wuchuheng/zpm-hello',
+  version: '1.0.0',
+  description: 'A zpm package',
+  main: 'src/main.zsh',
+  scripts: {
+    test: 'echo "Error: no test specified" && exit 1',
+    hello: 'echo "hello world"',
+  },
+  keywords: [],
+  author: '',
+  license: 'ISC',
+  dependencies: {
+    'github.com/wuchuheng/zpm': '37a1d53e1020ebabe61fed367cb6eed256b9e6c4',
+  },
 }
