ci(github-actions): Fix typo and update CentOS test environment setup
- Corrected a typo in the `unit_test_on_centOS` job name, changing "Unit est on centOS" to "Unit test on centOS."
- Updated the CentOS test environment setup by adding the installation of `git` alongside `make` and `zsh`, ensuring all necessary tools are available for unit testing.

These updates enhance the accuracy and reliability of the CI pipeline for unit testing on CentOS.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,7 +38,7 @@ jobs:
       - id: set-matrix
         run: echo 'matrix=["centos:centos8.4.2105", "centos:centos8"]' >> $GITHUB_OUTPUT
   unit_test_on_centOS:
-    name: Unit est on centOS
+    name: Unit test on centOS
     needs:
       - setup_matrix_for_centOS
     runs-on: ubuntu-latest
@@ -66,7 +66,7 @@ jobs:
       - name: Unit test
         run: |
           docker exec ${CONTAINER_NAME} bash -c "
-            yum install -y make zsh;
+            yum install -y make zsh git;
             export PATH=\${PATH}:\$(pwd)/bin;
             bin/qjs --version
             make unit-test;
