refactor(zpm): Update function call and documentation, modify package dependencies
- In `src/autoload.zsh`, updated the `extract_functions` call to remove unnecessary error redirection.
- Modified help documentation in `test/unit/zpm.test/expect_help_doc.txt` and `expect_zpm_run_help_doc.txt` to align with the updated command descriptions in the ZPM CLI.
- Updated the dependency version for 'github.com/zpm-shell/lib-demo' in `zpm-package.json5` to a new commit hash.

These changes refine the function execution process in the autoload script, ensure consistency in the help documentation, and maintain up-to-date dependencies in the ZPM package configuration.

--- a/zpm-package.json5
+++ b/zpm-package.json5
@@ -11,6 +11,6 @@
   author: '',
   license: 'ISC',
   dependencies: {
-    'github.com/wuchuheng/zpm': '37a1d53e1020ebabe61fed367cb6eed256b9e6c4',
+    'github.com/zpm-shell/lib-demo': 'b24bf106505ada77f3a478cf89f31c4c7c3002ca',
   },
 }
