ci: Streamline release process with automated version updates
- Modify release GitHub Actions workflow to trigger on tag pushes only.
- Add post-release step to update version references in relevant files.
- Configure git user for automated commits within GitHub Actions.
- Update README and install script to use latest installation instructions.
- Set version name dynamically in install script based on release tag.
- Ensure that the zpm-package.json5 reflects the current release version.

chore: Update installation instructions and version management

- Refine installation process with direct curl command in README.
- Introduce VERSION_NAME variable in install.sh for dynamic version control.
- Script to update version references post-release for consistent versioning across project files.

docs: Add CONTRIBUTING.md for clear contribution guidelines

- Provide detailed guidance for setting up local development environment.
- Outline style guidelines for commit messages and documentation.
- Include steps for reporting bugs, suggesting enhancements, and making first code contributions.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,8 +2,6 @@ name: Release ZPM
 
 on:
   push:
-    branches:
-        - feat
     tags:
       - "*"
 
@@ -44,3 +42,15 @@ jobs:
         with:
           artifacts: "${{ env.TAR_FILE }}"
           bodyFile: "${{ env.VERSION_CHANGE_LOG_FILE }}"
+
+      - name: Update the version name in the asociated files
+        run: |
+          .github/release/update_version_name.sh "${GITHUB_REF#refs/tags/}"
+      
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "root@wuchuheng.com"
+          git config --local user.name"wuchuheng"
+          git add -A
+          git commit -m "release: Update version name"
+          git push origin HEAD:refs/heads/feat
