--- a/zpm-package.json5
+++ b/zpm-package.json5
@@ -1,6 +1,6 @@
 {
   name: 'github.com/wuchuheng/zpm-hello',
-  version: '1.0.0',
+  version: "0.0.1"
   description: 'A zpm package',
   main: 'src/main.zsh',
   scripts: {
