chore: update the release workflow for github action#4

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,4 +53,5 @@ jobs:
           git config --local user.name"wuchuheng"
           git add -A
           git commit -m "release: Update version name"
-          git push origin HEAD:refs/heads/feat
+      - name: Push changes
+        run: git push origin HEAD:refs/heads/feat
