--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,12 +46,16 @@ jobs:
       - name: Update the version name in the asociated files
         run: |
           .github/release/update_version_name.sh "${GITHUB_REF#refs/tags/}"
+
+      - name: Remove the tar file and change log
+        run: |
+          rm ${TAR_FILE} ${VERSION_CHANGE_LOG_FILE}
       
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           branch: feat
-          commit_message: "Update version name to ${GITHUB_REF#refs/tags/}"
+          commit_message: "Update version name to ${{GITHUB_REF#refs/tags/}}"
           # Optional commit user and author settings
           commit_user_name: My GitHub Actions Bot # defaults to "github-actions[bot]"
           commit_user_email: root@wuchuheng.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
