--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,9 +54,10 @@ jobs:
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          branch: feat
+          branch: release
           commit_message: "Update version name to ${{ env.GITHUB_REF }}"
           # Optional commit user and author settings
           commit_user_name: My GitHub Actions Bot # defaults to "github-actions[bot]"
           commit_user_email: root@wuchuheng.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
           commit_author: wuchuheng<root@wuchuheng.com> # defaults to "username <username@users.noreply.github.com>", where "username" belongs to the author of the commit that triggered the run
+          create_branch: true
