--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Release ZPM
+name: Release zpm
 
 on:
   push:
@@ -35,7 +35,7 @@ jobs:
             echo "VERSION_CHANGE_LOG_FILE=${VERSION_CHANGE_LOG_FILE}" >> $GITHUB_ENV
             echo "VERSION_CHANGE_LOG_FILE: ${VERSION_CHANGE_LOG_FILE}"
             echo "version: ${GITHUB_REF#refs/tags/}"
-            .github/release/get_change_log.sh "${GITHUB_REF#refs/tags/}" > ${VERSION_CHANGE_LOG_FILE}
+            .github/.dev_scripts/get_change_log.sh "${GITHUB_REF#refs/tags/}" > ${VERSION_CHANGE_LOG_FILE}
             cat ${VERSION_CHANGE_LOG_FILE}
       - name: Create Release
         uses: ncipollo/release-action@v1
@@ -45,7 +45,7 @@ jobs:
 
       - name: Update the version name in the asociated files
         run: |
-          .github/release/update_version_name.sh "${GITHUB_REF#refs/tags/}"
+          .github/.dev_scripts/update_version_name.sh "${GITHUB_REF#refs/tags/}"
 
       - name: Remove the tar file and change log
         run: |
