--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -88,3 +88,37 @@ jobs:
         run: |
           export PATH=${PATH}:$(pwd)/bin;
           make test
+
+  install_zpm_on_centOS:
+    name: Install zpm on centOS
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        centos: ${{fromJson(needs.setup_matrix_for_centOS.outputs.matrix)}}
+    env:
+      CENTOS_VERSION: ${{ matrix.centos }}
+    steps:
+      - name: Set container name
+        id: vars
+        run: |
+          echo "CONTAINER_NAME=centos" >> $GITHUB_ENV
+      - name: Conf the yum repository
+        run: |
+          docker run -itd -v $PWD:/workdir --name ${CONTAINER_NAME} -w /workdir ${CENTOS_VERSION}
+          docker exec ${CONTAINER_NAME} bash -c "
+            cd /etc/yum.repos.d/ && rm -rf * .??* && cd -
+            cat .github/conf/CentOS-Base.repo > /etc/yum.repos.d/CentOS-Base.repo
+            cat /etc/yum.repos.d/CentOS-Base.repo
+          "
+      - name: Install zsh, git and curl
+        run: |
+          docker exec ${CONTAINER_NAME} bash -c "
+            yum install -y make zsh git curl;
+          "
+      - name: Install zpm
+        run: |
+          docker exec ${CONTAINER_NAME} bash -c "
+            curl -fsSL https://raw.githubusercontent.com/zpm-shell/zpm/master/install.sh | bash   
+            zpm -v
+          "
