--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -92,6 +92,8 @@ jobs:
   install_zpm_on_centOS:
     name: Install zpm on centOS
     runs-on: ubuntu-latest
+    needs:
+      - setup_matrix_for_centOS
     strategy:
       fail-fast: false
       matrix:
