--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -61,3 +61,54 @@ jobs:
           commit_user_email: root@wuchuheng.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
           commit_author: wuchuheng<root@wuchuheng.com> # defaults to "username <username@users.noreply.github.com>", where "username" belongs to the author of the commit that triggered the run
           create_branch: true
+  
+  setup_matrix_for_centOS:
+    name: Setup matrix for centOS
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - id: set-matrix
+        run: echo 'matrix=["centos:centos8.4.2105", "centos:centos8"]' >> $GITHUB_OUTPUT
+  
+  release_test:
+    name: Release test
+    runs-on: ubuntu-latest
+    needs: 
+      - release
+      - setup_matrix_for_centOS
+    strategy:
+      fail-fast: false
+      matrix:
+        centos: ${{fromJson(needs.setup_matrix_for_centOS.outputs.matrix)}}
+    env:
+      CENTOS_VERSION: ${{ matrix.centos }}
+    steps:
+      - name: Set container name
+        id: vars
+        run: |
+          echo "CONTAINER_NAME=centos" >> $GITHUB_ENV
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Conf the yum repository
+        run: |
+          docker run -itd -v $PWD:/workdir --name ${CONTAINER_NAME} -w /workdir ${CENTOS_VERSION}
+          docker exec ${CONTAINER_NAME} bash -c "
+            cd /etc/yum.repos.d/ && rm -rf * .??* && cd -
+            cat .github/conf/CentOS-Base.repo > /etc/yum.repos.d/CentOS-Base.repo
+            cat /etc/yum.repos.d/CentOS-Base.repo
+          "
+      - name: Remove the repository files
+        run: |
+            rm -rf ./* .??*
+      - name: Install zsh, git and curl
+        run: |
+          docker exec ${CONTAINER_NAME} bash -c "
+            yum install -y make zsh git curl;
+          "
+      - name: Install zpm
+        run: |
+          docker exec ${CONTAINER_NAME} bash -c "
+            curl -fsSL https://raw.githubusercontent.com/zpm-shell/zpm/release/install.sh | bash   
+            zpm -v
+          "
