fix(ci): Correct the path to get_change_log.sh in release workflow
This update corrects the script path for generating the change log during the release process. The corrected path should resolve the "No such file or directory" error encountered in the GitHub Actions release job.

- docs: update CHANGELOG.md for 0.0.4 version.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,7 +35,7 @@ jobs:
             echo "VERSION_CHANGE_LOG_FILE=${VERSION_CHANGE_LOG_FILE}" >> $GITHUB_ENV
             echo "VERSION_CHANGE_LOG_FILE: ${VERSION_CHANGE_LOG_FILE}"
             echo "version: ${GITHUB_REF#refs/tags/}"
-            .github/.dev_scripts/get_change_log.sh "${GITHUB_REF#refs/tags/}" > ${VERSION_CHANGE_LOG_FILE}
+            .dev_scripts/get_change_log.sh "${GITHUB_REF#refs/tags/}" > ${VERSION_CHANGE_LOG_FILE}
             cat ${VERSION_CHANGE_LOG_FILE}
       - name: Create Release
         uses: ncipollo/release-action@v1
