fix(ci): Correct the path to get_change_log.sh in release workflow
    This update corrects the script path for generating the change log during the release process. The corrected path should resolve the "No such file or directory" error encountered in the GitHub Actions release job.

    - docs: update CHANGELOG.md for 0.0.5 version.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Update the version name in the asociated files
         run: |
-          .github/.dev_scripts/update_version_name.sh "${GITHUB_REF#refs/tags/}"
+          .dev_scripts/update_version_name.sh "${GITHUB_REF#refs/tags/}"
 
       - name: Remove the tar file and change log
         run: |
