--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: set the tag name to env
+        run: |
+          echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
+      - name: merge the current branch to release
+        run: |
+          echo "current branch: ${GITHUB_REF}"
+          git checkout release && git merge ${{ github.ref }}
+
       - name: Set tar file name
         id: vars
         run: |
@@ -55,7 +64,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           branch: release
-          commit_message: "release: Update version name to ${GITHUB_REF#refs/tags/}"
+          commit_message: "release: Update version name to ${{ env.TAG_NAME }}"
           # Optional commit user and author settings
           commit_user_name: My GitHub Actions Bot # defaults to "github-actions[bot]"
           commit_user_email: root@wuchuheng.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
