ci(release): Merge changes to release branch and set tag name in env
    Updated the GitHub Actions release workflow to include steps for setting the tag name in the environment variable and merging the current branch to the release branch. The commit message now dynamically references the tag name from the environment variable.

    chore(changelog): Document fixes and changes for v0.0.7

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: merge the current branch to release
         run: |
           echo "current branch: ${GITHUB_REF}"
-          git checkout release && git merge ${{ github.ref }}
+          git checkout release && git merge ${{ env.TAG_NAME }}
 
       - name: Set tar file name
         id: vars
