--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,9 @@ jobs:
       - name: merge the current branch to release
         run: |
           echo "current branch: ${GITHUB_REF}"
-          git checkout release && git merge ${{ env.TAG_NAME }}
+          git branch | cat
+          git checkout release 
+          git merge ${{ env.TAG_NAME }}
 
       - name: Set tar file name
         id: vars
