--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -61,10 +61,11 @@ jobs:
           branch: master 
           commit_message: "release: Update version name to ${{ env.TAG_NAME }}"
           # Optional commit user and author settings
-          commit_user_name: My GitHub Actions Bot # defaults to "github-actions[bot]"
+          commit_user_name: GitHub Actions [Bot] # defaults to "github-actions[bot]"
           commit_user_email: root@wuchuheng.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
           commit_author: wuchuheng<root@wuchuheng.com> # defaults to "username <username@users.noreply.github.com>", where "username" belongs to the author of the commit that triggered the run
-  
+          create_branch: true
+
   setup_matrix_for_centOS:
     name: Setup matrix for centOS
     runs-on: ubuntu-latest
