ci(release): Merge changes to release branch and set tag name in env
                        Updated the GitHub Actions release workflow to include steps for setting the tag name in the environment variable and merging the current branch to the release branch. The commit message now dynamically references the tag name from the environment variable.

                        chore(changelog): Document fixes and changes for v0.0.13

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -114,5 +114,5 @@ jobs:
         run: |
           docker exec ${CONTAINER_NAME} bash -c "
             curl -fsSL https://raw.githubusercontent.com/zpm-shell/zpm/master/install.sh | bash   
-            zpm -v
+            zsh -c 'source ~/.zshrc; zpm -h'
           "
