ci(github-actions): Execute Makefile commands with sudo
Modified the GitHub Actions release workflow to execute Makefile commands using sudo to fix permission issues during the change log setup and README version update steps.

chore(changelog): Document dev script refactor

Updated the CHANGELOG.md to include a note about the recent refactoring of development scripts for clarity and consistency in the release process.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
             echo "VERSION_CHANGE_LOG_FILE=${VERSION_CHANGE_LOG_FILE}" >> $GITHUB_ENV
             echo "VERSION_CHANGE_LOG_FILE: ${VERSION_CHANGE_LOG_FILE}"
             echo "version: ${GITHUB_REF#refs/tags/}"
-            make change_log VERSION="${GITHUB_REF#refs/tags/}" > ${VERSION_CHANGE_LOG_FILE}
+            sudo make change_log VERSION="${GITHUB_REF#refs/tags/}" > ${VERSION_CHANGE_LOG_FILE}
             cat ${VERSION_CHANGE_LOG_FILE}
       - name: Create Release
         uses: ncipollo/release-action@v1
@@ -50,7 +50,7 @@ jobs:
 
       - name: Update the version in README.md
         run: |
-          make update_readme_version VERSION=${{ env.TAG_NAME }}
+          sudo make update_readme_version VERSION=${{ env.TAG_NAME }}
 
       - name: Remove the tar file and change log
         run: |
