--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,25 +48,6 @@ jobs:
           artifacts: "${{ env.TAR_FILE }}"
           bodyFile: "${{ env.VERSION_CHANGE_LOG_FILE }}"
 
-      - name: Update the version in README.md
-        run: |
-          make update_readme_version VERSION=${{ env.TAG_NAME }}
-
-      - name: Remove the tar file and change log
-        run: |
-          rm ${TAR_FILE} ${VERSION_CHANGE_LOG_FILE}
-      
-      - name: Commit and push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          branch: master 
-          commit_message: "docs: Update the version: ${{ env.TAG_NAME }} in README.md"
-          # Optional commit user and author settings
-          commit_user_name: GitHub Actions [Bot] # defaults to "github-actions[bot]"
-          commit_user_email: root@wuchuheng.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
-          commit_author: wuchuheng<root@wuchuheng.com> # defaults to "username <username@users.noreply.github.com>", where "username" belongs to the author of the commit that triggered the run
-          create_branch: true
-
   setup_matrix_for_centOS:
     name: Setup matrix for centOS
     runs-on: ubuntu-latest
@@ -113,7 +94,38 @@ jobs:
           "
       - name: Install zpm
         run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
           docker exec ${CONTAINER_NAME} bash -c "
-            curl -fsSL https://raw.githubusercontent.com/zpm-shell/zpm/master/install.sh | bash   
+            curl -fsSL https://raw.githubusercontent.com/zpm-shell/zpm/${TAG_NAME}/install.sh | bash   
             zsh -c 'source ~/.zshrc; zpm -h'
           "
+        
+  update_readme_version:
+    name: Release test
+    runs-on: ubuntu-latest
+    needs:
+      - release
+      - setup_matrix_for_centOS
+      - release_test
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: set the tag name to env
+        run: |
+          echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+      - name: Update the version in README.md
+        run: |
+          make update_readme_version VERSION=${{ env.TAG_NAME }}
+
+      - name: Commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          branch: master
+          commit_message: "docs: Update the new version: ${{ env.TAG_NAME }} to README.md"
+          # Optional commit user and author settings
+          commit_user_name: GitHub Actions [Bot] # defaults to "github-actions[bot]"
+          commit_user_email: root@wuchuheng.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
+          commit_author: wuchuheng<root@wuchuheng.com> # defaults to "username <username@users.noreply.github.com>", where "username" belongs to the author of the commit that triggered the run
+          create_branch: true
