refactor(dev-scripts): Enhance input validation in update script
Updated the `update_release_version.sh` script to include input validation, ensuring that a version name is provided before attempting to update the version in `zpm-package.json5`. This prevents errors during the release process and improves the robustness of the script.

fix(install-script): Update installation command and directory

Adjusted the installation command in both `release.yaml` workflow and `README.md` to correct the download and source execution steps. Also, changed the temporary save directory in `install.sh` to `.zpm_tmp` to avoid potential conflicts with existing directories.

feat(install-script): Add shell compatibility checks

Implemented shell environment checks in `install.sh` to verify if the script is being run in a compatible shell (either zsh or bash). It exits with a message if an incompatible shell is detected, guiding the user towards a supported environment.

bump(version): Update project version to 0.0.19

Incremented the version number across all relevant files (`install.sh`, `zpm-package.json5`, `CHANGELOG.md`) to 0.0.19 to reflect the latest release. This change aligns the project versioning with the new release cycle.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -96,8 +96,7 @@ jobs:
         run: |
           TAG_NAME=${GITHUB_REF#refs/tags/}
           docker exec ${CONTAINER_NAME} bash -c "
-            curl -fsSL https://raw.githubusercontent.com/zpm-shell/zpm/${TAG_NAME}/install.sh | bash   
-            zsh -c 'source ~/.zshrc; zpm -h'
+            curl -fsSL -o https://raw.githubusercontent.com/zpm-shell/zpm/${TAG_NAME}/install.sh && source install.sh
           "
         
   update_readme_version:
