--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -105,9 +105,11 @@ jobs:
           "
       - name: Install zpm
         run: |
-          docker exec ${CONTAINER_NAME} bash -c "
-            curl -fsSL -o https://raw.githubusercontent.com/zpm-shell/zpm/${{ env.TAG_NAME }}/install.sh && source install.sh
-          "
+            TAG_NAME=${GITHUB_REF#refs/tags/}
+            echo "tagName: $TAG_NAME"
+            docker exec ${CONTAINER_NAME} bash -c "
+              curl -fsSL -o https://raw.githubusercontent.com/zpm-shell/zpm/${TAG_NAME}/install.sh && source install.sh
+            "
         
   update_readme_version:
     name: Release test
