--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,22 +9,9 @@ jobs:
   test:
     uses: ./.github/workflows/test.yaml
   
-  init_env:
-    needs:
-      - test
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: set the tag name to env
-        run: |
-          echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
   release:
     needs:
       - test
-      - init_env
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -72,7 +59,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: 
       - release
-      - init_env
       - setup_matrix_for_centOS
     strategy:
       fail-fast: false
@@ -106,7 +92,7 @@ jobs:
       - name: Install zpm
         run: |
             TAG_NAME=${GITHUB_REF#refs/tags/}
-            echo "tagName: $TAG_NAME"
+            echo "version: $TAG_NAME"
             docker exec ${CONTAINER_NAME} bash -c "
               curl -fsSL -o install.sh https://raw.githubusercontent.com/zpm-shell/zpm/${TAG_NAME}/install.sh && source install.sh
             "
@@ -118,7 +104,6 @@ jobs:
       - release
       - setup_matrix_for_centOS
       - release_test
-      - init_env
     permissions:
       contents: write
     steps:
@@ -126,7 +111,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Update the version in README.md
         run: |
-          make update_readme_version VERSION=${{ env.TAG_NAME }}
+            TAG_NAME=${GITHUB_REF#refs/tags/}
+            echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+            echo "version: $TAG_NAME"
+            make update_readme_version VERSION=${TAG_NAME}
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
