--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Set tar file name
         id: vars
         run: |
+          set -e
           projectName=$(basename $PWD)
           echo "TAR_FILE=${projectName}-${GITHUB_REF#refs/tags/}.tar.gz" >> $GITHUB_ENV
 
@@ -98,7 +99,7 @@ jobs:
             "
         
   update_readme_version:
-    name: Release test
+    name: update the version in README.md
     runs-on: ubuntu-latest
     needs:
       - release
@@ -111,6 +112,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Update the version in README.md
         run: |
+            set -e
             TAG_NAME=${GITHUB_REF#refs/tags/}
             echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
             echo "version: $TAG_NAME"
